--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,27 +12,31 @@
 				<strong>Meu Portifólio</strong>
 			</h1>
 			<p class="subtext editable">Veja os projetos que já trabalhei.</p>
-			<p class="subtext editable">Vamos conversar - meuportifolio@contato.com.br.</p>
+			<p class="subtext editable">Vamos conversar - kaua54@hotmail.com</p>
+<a  href="https://api.whatsapp.com/send?phone=5511995313365"><p class="subtext editable">(11) 9 99531-3365	</p></a>
+ 				
 		</div>
 	</section>
-
 	<div class="content">
 		<section>
 			<div class="container flex">
 				<div class="text editable">
 					<h2 style="color: #666666">
-						<strong>CarMais</strong>
+						<strong>Controle de Departamentos</strong>
 					</h2>
 					<p>
-						Vamos neste exemplo construir uma aplicação que simule o site WebMotors 
-						e suas principais funcionalidades.
+						Neste projeto foi feito o controle de cadastro de fucionarios, onde os mesmos tem seus cargos,
+						 departamento e cadastro com seus relacionamentos no banco de dados. Conhecimento adquirido com Profº Márcio Ballem!
 						<br /> <br />
 						<strong>Tecnologias :</strong>
-						HTML5, Boostrap, JSF, Primefaces, Ominifaces, CDI, EJB, Hibernate, JPA, MySQL, Maven, Heroku e muitas outras.
+						Java, Spring MVC, Spring Boot, Thymeleaf, MySql, Html 5 , JavaScript, Bootstrap e muito mais... 
 					</p>
 				</div>
 				<div class="image">
-					<img src="assets/img.png" />
+				<a href="https://barrostech-demo-mvc.herokuapp.com/" target="_blank">
+				<img src="assets/demo_mvc.jpg" />
+				</a>
+					
 				</div>
 			</div>
 		</section>
@@ -41,17 +45,21 @@
 			<div class="container flex">
 				<div class="text editable">
 					<h2 style="color: #666666">
-						<strong>Tuiuti</strong>
+						<strong>Api REST</strong>
 					</h2>
 					<p>
-						Desta vez iremos construir uma aplicação que simule Twitter  e suas principais funcionalidades.
+						Neste projeto, demonstro uma api REST, como em uma api REST não ha nada "visual", utilizo o Swagger para documentar alguns 
+						metodos. Conhecimentos adiquiridos no Canal da Michelli Britto.
 						<br /> <br />
 						<strong>Tecnologias :</strong>
-						HTML5, Bulma, Thymeleaf, Spring Framework, Spring MVC, Hibernate, JPA, MySql, Heroku e muitas outras.
+						 Java, Thymeleaf, Spring Framework, Spring MVC, Heroku ,Swagger e muitas outras.
 					</p>
 				</div>
 				<div class="image">
-					<img src="assets/img.png" />
+				<a href="https://api-rest-barrostech.herokuapp.com/swagger-ui.html#/produto45resource" target="_blank">
+					<img src="assets/rest.JPG" />
+				</a>
+					
 				</div>
 			</div>
 		</section>
@@ -82,7 +90,7 @@
 		<div class="container">
 			<ul class="footer-links">
 				<li>
-					<a target="_blank" href="https://facebook.com/" class="Facebook-icon"> 
+					<a target="_blank" href="https://www.facebook.com/emerson.barros.3956" class="Facebook-icon"> 
 						<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
 							<path d="M19,4V7H17A1,1 0 0,0 16,8V10H19V13H16V20H13V13H11V10H13V7.5C13,5.56 14.57,4 16.5,4M20,2H4A2,2 0 0,0 2,4V20A2,2 0 0,0 4,22H20A2,2 0 0,0 22,20V4C22,2.89 21.1,2 20,2Z"></path>
 						</svg>
@@ -90,7 +98,7 @@
 					</a>
 				</li>
 				<li>
-					<a target="_blank" href="https://twitter.com/" class="Twitter-icon">
+					<a target="_blank" href="https://twitter.com/emersonkaua" class="Twitter-icon">
 						<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
 							<path d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z"></path>
 						</svg>
@@ -107,6 +115,7 @@
 				</li>
 			</ul>
 		</div>
+		
 		<p class="copyright">© 2019 Meu Portifólio.
 			<a href="https://proud-alligator.cloudvent.net/#" class="cc-active">Terms</a> &amp; 
 			<a href="https://proud-alligator.cloudvent.net/#" class="cc-active">Privacy</a>
