--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,21 +105,12 @@
 						Twitter
 					</a>
 				</li>
-				<li>
-					<a target="_blank" href="https://youtube.com/" class="YouTube-icon">
-						<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-							<path d="M10,16.5V7.5L16,12M20,4.4C19.4,4.2 15.7,4 12,4C8.3,4 4.6,4.19 4,4.38C2.44,4.9 2,8.4 2,12C2,15.59 2.44,19.1 4,19.61C4.6,19.81 8.3,20 12,20C15.7,20 19.4,19.81 20,19.61C21.56,19.1 22,15.59 22,12C22,8.4 21.56,4.91 20,4.4Z"></path>
-						</svg>
-						YouTube
-					</a>
-				</li>
+				
 			</ul>
 		</div>
 		
-		<p class="copyright">© 2019 Meu Portifólio.
-			<a href="https://proud-alligator.cloudvent.net/#" class="cc-active">Terms</a> &amp; 
-			<a href="https://proud-alligator.cloudvent.net/#" class="cc-active">Privacy</a>
-			<a href="https://cloudcannon.com/">Template by CloudCannon</a>
+		<p class="copyright">© 2019 BarrosTech.
+			
 		</p>
 	</footer>
 </body>
