--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,28 @@
 </head>
 <body>
 	<section class="hero">
+		<div class="foto">
+			<img alt="" src="assets/foto.jpg">
+		</div>
 		<div class="text-container">
 			<h1 class="editable">
 				<strong>Meu Portifólio</strong>
 			</h1>
 			<p class="subtext editable">Veja os projetos que já trabalhei.</p>
 			<p class="subtext editable">Vamos conversar - kaua54@hotmail.com</p>
-<a  href="https://api.whatsapp.com/send?phone=5511995313365"><p class="subtext editable">(11) 9 99531-3365	</p></a>
+			<a  href="https://api.whatsapp.com/send?phone=5511995313365" target="_blank">
+			
+			
+			
+				<div id="icon">
+				<img src="assets/WhatsApp-icone.png"/>
+						<p id="numero">
+							(11)99531-3365
+						</p>	
+					
+				</div>
+				
+			</a>
  				
 		</div>
 	</section>
