--- a/src/main/resources/static/assets/style.css
+++ b/src/main/resources/static/assets/style.css
@@ -34,13 +34,43 @@ img {
 	width: 100%
 }
 
-img .zap{
-	width: 20px;
-	height: 20px;
+#numero{
+	margin-left: 0px;
 }
+
+.foto img{
+	float: left;
+	width: 150px;
+	height: 150px;
+	padding-left:20%;
+	text-align: left;
+}
+
+#icon{
+	width: 100%;
+	height: 50px;
+}
+
+#icon img{
+	float: left;
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	padding-left:10%;
+	
+}
+
 
 h1 strong, h2 strong {
 	font-weight: 700
+}
+#texto{
+	padding-right:38%;
+	margin-top: 10px;
+	width: 120px;
+	float: right;
+
+
 }
 
 h1 {
